change cover image

--- a/tutorial.yaml
+++ b/tutorial.yaml
@@ -1,4 +1,4 @@
 title: "Cloud Code and Parse"
-cover: cover.png
+cover: cover.jpg
 teaser_text: |
     This tutorial will help you get started with Parse Cloud Code.
